add citations to A.3

--- a/main.bib
+++ b/main.bib
@@ -2466,6 +2466,17 @@ MRREVIEWER = {Donald M. Davis},
        URL = {http://dx.doi.org/10.1016/0040-9383(92)90066-Q},
 }
 
+@article{Manin,
+  title={The theory of commutative formal groups over fields of finite characteristic},
+  author={Manin, Yu I},
+  journal={Russian Mathematical Surveys},
+  volume={18},
+  number={6},
+  pages={1},
+  year={1963},
+  publisher={IOP Publishing}
+}
+
 @book {Margolis,
     AUTHOR = {Margolis, H. R.},
      TITLE = {Spectra and the {S}teenrod algebra},
@@ -3458,6 +3469,14 @@ MRREVIEWER = {Douglas C. Ravenel},
 MRREVIEWER = {Jin Kun Lin},
        DOI = {10.1016/0040-9383(94)00032-G},
        URL = {http://dx.doi.org/10.1016/0040-9383(94)00032-G},
+}
+
+@book{Silverman,
+  title={The arithmetic of elliptic curves},
+  author={Silverman, Joseph H},
+  volume={106},
+  year={2009},
+  publisher={Springer Science \& Business Media}
 }
 
 @article {Singer,
