--- a/powerops.tex
+++ b/powerops.tex
@@ -526,7 +526,7 @@ In the next Lecture, we will show that Tate \(K\)--theory (cf.\ \Cref{TateKTheor
 
 The introduction of the geometry of \(E_\infty\)--ring spectra has borne out a second version of the \(\sigma\)--orientation, summarized as a map of \(E_\infty\)--ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object \(\tmf\) itself, not heretofore discussed.  This is one variant of the spectrum of \index{modular form!topological, \(\tmf\)}\textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a \(\String\)--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the \(C_2\)--equivariant spectrum \(KU\)); this diagram is very large; and the diagram exists only in the homotopy category and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
 
-The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We aren't going to prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Behrens has already given~\cite{BehrensConstruction}.  The idea is to make use of the obstruction theory that \(E_\infty\)--rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
+The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We will not prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Behrens has already given~\cite{BehrensConstruction}.  The idea is to make use of the obstruction theory that \(E_\infty\)--rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
 
 \begin{definition}[{\cite[Definition 6.2.2.6, Section 6.5]{LurieHTT}}]
 A \index{sheaf!infty sheaf@\(\infty\)--sheaf}\textit{\(\CatOf{D}\)--valued sheaf} on a site \(\CatOf{C}\) is a functor \(F\co \CatOf C \to \CatOf D\) that converts \v{C}ech diagrams of covers in the site $\CatOf C$ to homotopy limit diagrams in $\CatOf D$.
@@ -552,7 +552,7 @@ f_{\lambda,s,r,t} \co C_a & \to C_{a'}, \\
 x & \mapsto \lambda^2 x + r, \\
 y & \mapsto \lambda^3 y + sx + t,
 \end{align*}
-the universal one of which is defined over \[\moduli{Weier.trans.} = \moduli{Weier} \times \Spec \Z[\lambda^{\pm}, r, s, t].\]  This structure map is the groupoid component map in a groupoid scheme structure on \(\moduli{ell} = (\moduli{Weier}, \moduli{Weier.trans.})\), along which we have a descended map \[\moduli{ell} \to \moduli{fg}.\]
+the universal one of which is defined over \[\moduli{Weier.trans.} = \moduli{Weier} \times \Spec \Z[\lambda^{\pm}, r, s, t].\]  The evident structure map belongs to a groupoid scheme structure on \(\moduli{ell} = (\moduli{Weier}, \moduli{Weier.trans.})\), for which there is a descended map \[\moduli{ell} \to \moduli{fg}.\]
 
 With the moduli of elliptic curves now specified, we will construct a topological enrichment of \(\moduli{ell}\) by doing so locally, then gluing the resulting local definitions together along common subsets to generate a sheaf on the entire object.  We first divide \(\moduli{ell}\) up over primes by passing to the \(p\)--completion, then we further divide the \(p\)--complete moduli itself into two regions via the following result:
 
@@ -560,13 +560,13 @@ With the moduli of elliptic curves now specified, we will construct a topologica
 The \index{p divisible group@\(p\)--divisible group!elliptic curve}\index{elliptic curve!p divisible group@\(p\)--divisible group}\(p\)--divisible group of an elliptic curve is either formal of height \(2\) (called the \index{elliptic curve!supersingular}\textit{supersingular} case) or an extension of an \'etale \(p\)--divisible group of height \(1\) by a formal group of height \(1\) (called the \index{elliptic curve!ordinary}\text{ordinary} case).
 \end{lemma}
 \begin{proof}
-The category of Dieudonn\'e modules with quasi-isogenies inverted becomes semisimple, and the simple components all take the form \[M_{m, n} = \Cart_{\overline{\F}_p} / (V^m = F^n),\] for \(m\) and \(n\) coprime.  An \index{abelian variety}abelian variety is always isogenous to its dual, and hence in this semisimple category the \index{Dieudonn\'e module}Dieudonn\'e module associated to an abelian variety decomposes into a Cartier self-symmetric sum of generators.\footnote{This is called the \index{Riemann--Manin symmetry}\textit{Riemann--Manin symmetry condition}.}  An abelian variety of dimension \(d\) has \(p\)--divisible group of height \(2d\), and Cartier duality on these simple components obeys the formula \(DM_{m,n} = M_{n,m}\), from which it follows that the only possibilities for the quasi-isogenous components of a \(p\)--divisible group associated to an elliptic curve are \(M_{1,1}\) and \(M_{1,0} \oplus M_{0,1}\).
+The category of Dieudonn\'e modules with quasi-isogenies inverted becomes semisimple, and the simple components all take the form \[M_{m, n} = \Cart_{\overline{\F}_p} / (V^m = F^n),\] for \(m\) and \(n\) coprime~\cite{Manin}.  An \index{abelian variety}abelian variety is always isogenous to its dual~\cite[Section 7]{Milne}, and hence in this semisimple category the \index{Dieudonn\'e module}Dieudonn\'e module associated to an abelian variety decomposes into a Cartier self-symmetric sum of generators.\footnote{This is called the \index{Riemann--Manin symmetry}\textit{Riemann--Manin symmetry condition}.}  An abelian variety of dimension \(d\) has \(p\)--divisible group of height \(2d\), and Cartier duality on these simple components obeys the formula \(DM_{m,n} = M_{n,m}\), from which it follows that the only possibilities for the quasi-isogenous components of a \(p\)--divisible group associated to an elliptic curve are \(M_{1,1}\) and \(M_{1,0} \oplus M_{0,1}\).
 \end{proof}
 
 The names supersingular and ordinary are partially explained by the following result, which says that ordinary curves form the generic case and that supersingular curves are comparatively very rare:
 
-\begin{lemma}
-The supersingular locus of \(\moduli{ell}\) is \(0\)--dimensional.  In fact, it is the zero-locus of a polynomial of degree less than \(\lfloor (p-1)/12 \rfloor + 3\). \qed
+\begin{lemma}[{\cite[Theorem V.4.1.c]{Silverman}, \cite[Corollary 4.3]{BehrensConstruction}}]
+The supersingular locus of \(\moduli{ell}\) is \(0\)--dimensional.  In fact, it is the zero-locus of a polynomial of degree at most \(\lfloor (p-1)/12 \rfloor + 2\). \qed
 \end{lemma}
 
 \noindent We write \(i\co \moduli{ell}^{\ord} \to \moduli{ell}\) for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment $\sheaf O_{\top}$ of $\moduli{ell}$ by constructing the pieces of the following pullback:
@@ -590,7 +590,7 @@ Our task in this section is to define \(\sheaf O^{\ss}\) on \(\widehat{\moduli{e
 \begin{theorem}[{Serre--Tate~\cite[Appendix 1]{KatzSTLocalModuli}}]\index{Serre--Tate theorem}
 The map \(\moduli{ell} \to \moduli{pdiv}(2)\) is formally \'etale, where \(\moduli{pdiv}(2)\) is the moduli of \(p\)--divisible groups of height \(2\).\footnote{In general, the Serre--Tate theorem states that \(\moduli{ab}^{d} \to \moduli{pdiv}(2d)\) is formally \'etale.} \qed
 \end{theorem}
-\begin{lemma}
+\begin{lemma}[{\cite[Theorem 7.1.3]{BehrensLawson}}]
 The deformation theory of a connected \(p\)--divisible group of height \(d\) is isomorphic to the deformation theory of the associated formal group of height \(d\). \qed
 \end{lemma}
 
@@ -602,7 +602,7 @@ Let \(\Gamma\) be a finite height formal group over a perfect field.  The moduli
 
 Now we use the reduction above to extract from this a topological enrichment of \(\widehat{\moduli{ell}^{\ss}}\): the enrichment sheaf arises as the pullback of the Goerss--Hopkins--Miller sheaf along the Serre--Tate map \[\widehat{\moduli{ell}^{\ss}} = \coprod_{\text{s.s.\ \(C\)}} (\moduli{ell})^\wedge_C \xrightarrow{\text{f.\'e.}} \coprod_{\text{s.s.\ \(C\)}} (\moduli{pdiv}(2))^\wedge_{C[p^\infty]} \xleftarrow{\cong} \coprod_{\text{s.s.\ \(C\)}} (\moduli{fg})^\wedge_{\widehat C}.\]
 
-\begin{remark}
+\begin{remark}[{\cite[Section 8, Step 1]{BehrensConstruction}}]
 This buys more than just a bouquet of Morava \(E\)--theories, or even the global sections \[\sheaf O^{\ss}\left(\widehat{\moduli{ell}^{\ss}}\right) = \prod_{\text{supersingular \(C\)}} E_{\widehat C}^{h\Aut C}.\]  For instance, the moduli \(\moduli{ell}^{\ss}(N)\) of supersingular elliptic curves \(C\) equipped with a \index{level structure}level--\(N\) structure\footnote{A \index{level structure}\textit{level--\(N\) structure} is a specified isomorphism \(C[N] \cong (\Z/N)^{\times 2}\), i.e., a choice of basis for the \(N\)--torsion.} forms an \'etale cover of \(\moduli{ell}^{\ss}\) whenever \(p \nmid N\), and hence this sheaf produces a spectrum \(\TMF(N)^{\ss} = \sheaf O^{\ss}(\moduli{ell}^{\ss}(N))\) satisfying \((\TMF(N)^{\ss})^{hGL_2(\Z/N)} \simeq \TMF^{\ss}\).
 \end{remark}
 
@@ -632,7 +632,7 @@ The homotopy of a \(K(1)\)--local commutative \(K_p\)--algebra spectrum \(R\), s
     \item Given a map \(f\co A \to B\) of \(\theta\)--algebras, as well as specified realizations \(R\) and \(S\) of \(A\) and \(B\) respectively, what is the moduli of maps \(R \to S\) of \(E_\infty\)--rings which realize to \(f\)?
 \end{itemize}
 
-\begin{theorem}[{Goerss--Hopkins, \(K(1)\)--locally}]
+\begin{theorem}[{Goerss--Hopkins, \(K(1)\)--locally; \cite[Theorem 7.1]{BehrensConstruction}}]
 Given a map of \(\theta\)--algebras \(f\co A_* \to B_*\), the following \index{Andr\'e--Quillen cohomology}Andr\'e--Quillen cohomology groups (internal to \(\theta\)--algebras) measure various obstructions:
 \begin{center}
 \begin{tabular}{@{}ccc@{}} \toprule
@@ -646,11 +646,11 @@ a map \(E \to F\) of models & \(H^{s \ge 2}_\theta(A_*, \Loops^{s-1} B_*)\) & \(
 Finally, given such a map \(f\), there is a \index{Bousfield--Kan spectral sequence}spectral sequence computing the homotopy groups of the \(E_\infty\) mapping space: \[E_2^{s, t} = H^s_\theta(A_*, \Loops^{-t} B_*) \Rightarrow \pi_{-s-t}(\EinftyRings(E, F), f). \qed\]
 \end{theorem}
 
-\begin{remark}
+\begin{remark}[{\cite[Lemmas 7.5--6]{BehrensConstruction}}]
 These enhanced Andr\'e--Quillen cohomology groups can be computed using a Grothendieck-type spectral sequence, intertwining classical Andr\'e--Quillen cohomology groups for commutative rings with the extra task of checking compatibility with the \(\theta\)--algebra structure.  In practice, this means that if the underlying ring of a \(\theta\)--algebra is especially nice, it is immediately guaranteed that the relevant obstruction groups vanish.
 \end{remark}
 
-In order to apply this theorem, we need a guess as to what \(\theta\)--algebra should correspond to the completed \(p\)--adic \(K\)--theory of \(\TMF\).  The discussion in \Cref{PullingBackOverMfgVsMfgl}, \Cref{DefnChromaticHomologyThys}, and \Cref{RemovingStackinessFromSpectra} provide the foothold we need.  We expect the \(\theta\)--algebra to appear as the corner in the first of the following two pullback squares:
+In order to apply this theorem, we need a guess as to what \(\theta\)--algebra should correspond to the completed \(p\)--adic \(K\)--theory of \(\TMF\).  The discussion in \Cref{PullingBackOverMfgVsMfgl}, \Cref{DefnChromaticHomologyThys}, and \Cref{RemovingStackinessFromSpectra} provide the foothold we need.  We expect the \(\theta\)--algebra to appear as the corner in the right-most of the following two pullback squares:
 
 \begin{center}
 \begin{tikzcd}
@@ -659,7 +659,7 @@ In order to apply this theorem, we need a guess as to what \(\theta\)--algebra s
 \end{tikzcd}
 \end{center}
 
-\noindent Defined via these moduli, \(V^\wedge_\infty\) has a natural structure as a solution to a moduli problem itself: it parameterizes pairs \((C, \eta\co \G_m \xrightarrow{\cong} \widehat C)\) of ordinary elliptic curves and markings of their associated formal groups.  It also carries a natural interpretation as a \(\theta\)--algebra: the interesting operation \(\psi^p\) acts by
+\noindent Defined via these moduli, \(V^\wedge_\infty\) has a natural structure as a solution to a moduli problem itself: it parameterizes pairs \((C, \eta\co \G_m \xrightarrow{\cong} \widehat C)\) of ordinary elliptic curves and markings of their associated formal groups.  It also carries a natural interpretation as a \(\theta\)--algebra~\cite[Equation 5.3]{BehrensConstruction}: the interesting operation \(\psi^p\) acts by
 \[
 \psi^p\co (C, \eta\co \G_m \xrightarrow\cong \widehat C) \mapsto \left(
 \begin{tikzcd}
@@ -674,11 +674,11 @@ Unfortunately, this \(\theta\)--algebra is not nice enough to apply the Goerss--
 For \(p \ge 5\), the moduli \(\moduli{ell}^{\ord}(p)\) is \emph{affine}. \qed
 \end{lemma}
 
-\begin{corollary}
+\begin{corollary}[{\cite[Theorem 7.7]{BehrensConstruction}}]
 Write \(W_1\) for the associated \(\theta\)--algebra.  It has vanishing Goerss--Hopkins--Miller obstruction groups, hence realizes uniquely to an ordinary \(E_\infty\)--ring spectrum \(\TMF(p)^{\ord}\), and the action of \((\Z/p)^\times\) on the level structure enhances to a coherent \((\Z/p)^\times\)--action on \(\TMF(p)^{\ord}\). \qed
 \end{corollary}
 
-We define \(\TMF^{\ord}\), our candidate for the global sections of \(\sheaf O^{\ord}\), to be the \((\Z/p)^\times\)--fixed points of \(\TMF(p)^{\ord}\), and indeed its \(p\)--adic \(K\)--theory is \(V^\wedge_\infty\).  More than this, it turns out that the \(\theta\)--algebra associated to any formal \'etale affine open of \(\moduli{ell}^{\ord}\) has a unique realization \emph{as an algebra under \(\TMF(p)^{\ord}\)}, and maps between such also lift uniquely.  Altogether, this gives us the desired sheaf \(\sheaf O^{\ord}\)---and it shows that the potential complexity introduced by working with sheaves in an \(\infty\)--category does not arise in this case.
+We define \(\TMF^{\ord}\), our candidate for the global sections of \(\sheaf O^{\ord}\), to be the \((\Z/p)^\times\)--fixed points of \(\TMF(p)^{\ord}\), and indeed its \(p\)--adic \(K\)--theory is \(V^\wedge_\infty\)~\cite[Lemma 7.9]{BehrensConstruction}.  More than this, it turns out that the \(\theta\)--algebra associated to any formal \'etale affine open of \(\moduli{ell}^{\ord}\) has a unique realization \emph{as an algebra under \(\TMF(p)^{\ord}\)}, and maps between such also lift uniquely~\cite[Section 7, Step 2]{BehrensConstruction}.  Altogether, this gives us the desired sheaf \(\sheaf O^{\ord}\)---and it shows that the potential complexity introduced by working with sheaves in an \(\infty\)--category does not arise in this case.
 
 \begin{remark}
 This approach is also a common strategy: first find a topological enrichment of an affine cover of your stack of interest, then descend it to the stack itself.
@@ -690,9 +690,9 @@ This approach is also a common strategy: first find a topological enrichment of 
 
 \subsection*{Gluing data}
 
-We must also manufacture a map of sheaves \[i_* i^* \sheaf O_{\top} \to i_* i^* \left((\sheaf O_{\top})^\wedge_{\moduli{ell}^{\ss}}\right)\] to complete our putative pullback square.  This is rather similar to the construction of \(\sheaf O^{\ord}\) itself: we construct a candidate map \(\TMF^{\ord} \to (\TMF^{\ss})^{\ord} =: \widehat L_1 (\TMF^{\ss})\) of global sections, and then we use this to control the map of sheaves using relative Goerss--Hopkins obstruction theory.  The main results that marry algebra to topology are the following two facts about \((\TMF^{\ss})^{\ord}\).  The first is that \((\TMF^{\ss})^{\ord}\) counts as an elliptic spectrum:
+We must also manufacture a map of sheaves \[i_* i^* \sheaf O_{\top} \to i_* i^* \left((\sheaf O_{\top})^\wedge_{\moduli{ell}^{\ss}}\right)\] to complete our putative pullback square.  This is rather similar to the construction of \(\sheaf O^{\ord}\) itself: we construct a candidate map \[\TMF^{\ord} \to (\TMF^{\ss})^{\ord} =: \widehat L_1 (\TMF^{\ss})\] of global sections, and then we use this to control the map of sheaves using relative Goerss--Hopkins obstruction theory.  The main results that marry algebra to topology are the following two facts about \((\TMF^{\ss})^{\ord}\).  The first is that \((\TMF^{\ss})^{\ord}\) counts as an elliptic spectrum:
 
-\begin{lemma}
+\begin{lemma}[{\cite[Lemma 6.8]{BehrensConstruction}}]
 There is an elliptic curve \(C^{\alg}\) over an affine \(\Spf ((V^\wedge_\infty)^{\ss})\) such that \((\TMF^{\ss})^{\ord}\) is an elliptic spectrum for this curve.
 \end{lemma}
 \begin{proof}[Remarks on proof]
@@ -708,13 +708,13 @@ Such a theorem appears here when studying the homotopy ring of \(\widehat L_1 E_
 
 \noindent This specification of a map \(\Spf ((V^\wedge_\infty)^{\ss}) \to \moduli{ell}\) gives two candidates for a \(\theta\)--algebra structure on the \(p\)--adic \(K\)--theory of \(\TMF^{\ss}\): there is the \(\theta\)--algebra structure coming from transfer of structure along the map of schemes, and there is the \(\theta\)--algebra structure coming from the shear fact that \((\TMF^{\ss})^{\ord}\) is an \(E_\infty\)--ring spectrum, and hence topology simply imbues it with such algebraic structure.
 
-\begin{theorem}
+\begin{theorem}[{\cite[Theorem 6.10]{BehrensConstruction}}]
 The natural \(\theta\)--algebra structure on \(\Spf ((V^\wedge_\infty)^{\ss})\) induced by the map \(\Spf ((V^\wedge_\infty)^{\ss}) \to \Spf V^\wedge_\infty\) agrees with the Goerss--Hopkins--Miller \(\theta\)--algebra structure on \(K_p (\TMF^{\ss})\). \qed
 \end{theorem}
 
-\noindent This is to be read as a recognition theorem for the \(\theta\)--algebra structure on the topological object \((\TMF^{\ss})^{\ord}\): it matches the algebraic model.  Once this is established, the Goerss--Hopkins--Miller obstructions can be shown to vanish after introducing a suitable level structure; it follows that the above map lifts to a \((\Z/p)^{\times}\)--equivariant map of the \(E_\infty\)--rings of the global sections over the moduli with level structure; this descends to a map of global sections over the original module after taking \((\Z/p)^\times\)--fixed points; and one finally produces the map of sheaves by further applications of relative obstruction theory.
+\noindent This is to be read as a recognition theorem for the \(\theta\)--algebra structure on the topological object \((\TMF^{\ss})^{\ord}\): it matches the algebraic model.  Once this is established, the Goerss--Hopkins--Miller obstructions can be shown to vanish after introducing a suitable level structure; it follows that the above map lifts to a \((\Z/p)^{\times}\)--equivariant map of the \(E_\infty\)--rings of the global sections over the moduli with level structure; this descends to a map of global sections over the original module after taking \((\Z/p)^\times\)--fixed points; and one finally produces the map of sheaves by further applications of relative obstruction theory~\cite[Section 8, Step 2]{BehrensConstruction}.
 
-\begin{remark}
+\begin{remark}[{\cite[Section 9]{BehrensConstruction}}]
 \index{arithmetic fracture}Arithmetic fracture is dealt with similarly, but it is \emph{far} simpler.  Because \(\Q \otimes \TMF\) has a smooth \(\Q\)--algebra as its homotopy, the obstructions governing the version of Goerss--Hopkins--Miller for commutative \(H\Q\)--algebras vanish, letting us lift algebraic results into homotopy theory wholesale.
 \end{remark}
 
@@ -725,12 +725,12 @@ The natural \(\theta\)--algebra structure on \(\Spf ((V^\wedge_\infty)^{\ss})\) 
 
 \subsection*{Variations on these results}
 
-\begin{remark}
+\begin{remark}[{\cite[Lemma 5.2, Case 2]{BehrensConstruction}}]
 At the prime \(3\), the proof of Igusa's theorem needs amplification, but the statement remains the same and the rest of the story goes through smoothly.
 \end{remark}
 
-\begin{remark}
-At the prime \(2\), two further things go wrong: one must pass to the Igusa cover \(\moduli{ell}^{\ord}(4)\) before it becomes affine, but then the Galois group of this cover is \(C_2\), which has infinite cohomological dimension at \(2\).  Appealing to the equivalence \(KO = KU^{hC_2}\), one works with \(2\)--adic \emph{real} \(K\)--theory instead, which somehow pre-computes the Galois action.
+\begin{remark}[{\cite[Lemma 5.2, Case 3; Section 8, Step 1]{BehrensConstruction}}]
+At the prime \(2\), two further things go wrong: one must pass to the Igusa cover \(\moduli{ell}^{\ord}(4)\) before it becomes affine, but then the Galois group of this cover is \(C_2\), which has infinite cohomological dimension at \(2\).  Appealing to the equivalence \(KO = KU^{hC_2}\), one works with \(2\)--adic \emph{real} \(K\)--theory instead, which pre-computes the Galois action.
 \end{remark}
 
 \begin{remark}[{\cite{HopkinsK1LocalEinftyRings}, \cite{LauresK1LocalTmf}}]
@@ -757,7 +757,7 @@ A topological enrichment can be thought of as an enhancement of a classical alge
 One of the main upsides of producing a topological enrichment is that it is naturally equipped with a spectral sequence computing the homotopy of its global sections, coming from recovering \(\sheaf O(\stack N)\) as the homotopy limit of finer and finer covers of \(\stack N\).
 
 \begin{lemma}
-For \(\sheaf O\) a topological enrichment of a map \(\stack N \to \moduli{fg}\), there is a spectral sequence \[\pushQED{\qed} E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \sheaf{O}(\stack{N}). \qedhere \popQED\]
+For \(\sheaf O\) a topological enrichment of a map \(\stack N \to \moduli{fg}\), there is a Bousfield--Kan spectral sequence \[\pushQED{\qed} E_2^{s, t} = H^s(\stack{N}; \pi_t \circ \sheaf O) \Rightarrow \pi_{t-s} \sheaf{O}(\stack{N}). \qedhere \popQED\]
 \end{lemma}
 
 \begin{lemma}
