--- a/sigma.tex
+++ b/sigma.tex
@@ -1062,13 +1062,13 @@ Function & Zero locus \\
 This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-The \(\theta\)--functions version of the story has two main successes: it continues to make sense in algebraic geometry, without invoking transcendental functions, and in fact there is a version of this story for an \emph{arbitrary} \index{abelian variety}abelian variety.  It turns out that all abelian varieties are projective, and the theorem sitting at the heart of this claim is
-\begin{corollary}[{``Theorem of the Cube'', \cite[Corollary I.6.4 and Theorem I.7.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@\(\Theta\)--structure|see {cubical structure}}
+Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an elliptic curve (indeed, on an arbitrary complex abelian variety\index{abelian variety}) are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, and finally that this canonical basis becomes the classical $\theta$--functions under the induced isomorphism~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,MumfordEquationsII,MumfordEquationsIII,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation described remains unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), from which the form of the relevant quartics can be deduced, altogether giving an effective description of the \emph{moduli} of abelian varieties as an analogue of the Jacobi quartic.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
+\begin{theorem}[{``Theorem of the Cube'', \cite[Theorem I.5.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@\(\Theta\)--structure|see {cubical structure}}
 Let \(A\) be an abelian variety, let \(p_i: A \times A \times A \to A\) be the projection onto the \(i\){\th} factor, and let \(p_{ij} = p_i +_A p_j\), \(p_{ijk} = p_i +_A p_j +_A p_k\).  Then for any invertible sheaf \(\L\) on \(A\), the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on \(A \times A \times A\) is trivial.  If \(\L\) is rigid (i.e., it has a specified trivialization at the identity point of \(A\)), then \(\Theta^3(\L)\) is \emph{canonically} trivialized by a section \(s(A; \L)\). \qed
-\end{corollary}
+\end{theorem}
 
 \begin{remark}
-One way to read the Theorem of the Cube is that a weight zero divisor on an abelian variety is principal (i.e., it is the zeroes and poles of a meromorphic function) if and only if its nodes sum to zero.  The meromorphic function you construct this way is unique up to scale, so if you impose a normalization condition at the identity point, you get a unique such function.  Altogether, this gives a pairing between \((A \times A)^*\) and \(A\), which can be reconsidered as a multiplication map \(A \times A \to A\).
+One way to read the Theorem of the Cube is that a weight zero divisor on an abelian variety is principal (i.e., it is the zeroes and poles of a meromorphic function) if and only if its nodes sum to zero.  The meromorphic function you construct this way is unique up to scale, so if you impose a normalization condition at the identity point, you get a unique such function.  Altogether, this gives a pairing between \((A \times A)^*\) and \(A\), which in fact recovers the multiplication map \(A \times A \to A\).
 \end{remark}
 
 \begin{remark}
@@ -1080,12 +1080,8 @@ The section \(s(A; \L)\) satisfies three familiar properties:
 \end{itemize}
 \end{remark}
 
-\begin{remark}
-The proof of projectivity arising from this method rests on choosing a line bundle on \(A\), extracting from it a very ample line bundle, and then constructing some generating global sections to get an embedding into \(\P(\L^{\oplus n})\)~\cite[Remark II.7.8.2]{Hartshorne}.  Mumford~\cite{MumfordEquationsI} showed that a choice of ``\(\theta\)--structure'' on \((A, \L)\), which is only slightly more data, gives a canonical choice of generating global sections as well as a canonical identification of \(\P(\L^{\oplus n})\) with a \emph{fixed} projective space.  This is suitable for studying how these equations change as one considers different points in the \index{abelian variety!moduli}moduli of abelian varieties~\cite{MumfordEquationsII,MumfordEquationsIII}.
-\end{remark}
-
 \begin{remark}[{\cite[Section 4]{Breen}}]
-Breen presented a relative version of this story that applies to arbitrary \emph{commutative group schemes}, where the basic objects are a choice of line bundle \(\L\) over a commutative group scheme \(A\), a choice of trivialization of \(\Theta^3 \L\), and an epimorphism \(\pi\co A' \to A\) that trivializes \(\L\).
+Breen presented a relative version of this part of the story that applies to arbitrary \emph{commutative group schemes}, where the basic objects are a choice of line bundle \(\L\) over a commutative group scheme \(A\), a choice of trivialization of \(\Theta^3 \L\), and an epimorphism \(\pi\co A' \to A\) that trivializes \(\L\).
 \end{remark}
 
 Finally, we remark that the function \[e\co C^3(\G; \Gm) \to \InternalHom{FormalGroups}(\G^{\sm 2}, \Gm)\] considered in \Cref{ChromaticKUCoopnsSection} also manifests in the theory of abelian varieties.  Let \(A\) be an abelian variety equipped with a line bundle \(\L\).  Suppose that \(s\) is a symmetric, rigid section of \(\Theta^3 \L\), sometimes called a \index{cubical structure}\textit{cubical structure on \(\L\)}.  Using the identification \((p_{12} - p_1 - p_2)^* \Theta^2 \L = \Theta^3 \L\), this induces the structure of a \textit{symmetric biextension}\index{cubical structure!symmetric biextension} on \(\Theta^2 \L\) via the multiplication maps
