remove alternate notation for KU appearing in A.4

--- a/powerops.tex
+++ b/powerops.tex
@@ -1079,11 +1079,11 @@ We have thus identified the legal fillers \(C\) as those sequences of rational n
 
 We have identified three points where we want to understand the collection of stable \(KO_p\) operations (which we will abbreviate to \(KO\), since in this subsection we are concerned only with the \(p\)--adic case).  Although much of the main text of this book has been concerned with this sort of subject, this does not appear to be so immediately accessible: we want operations rather than cooperations, and \(KO\) is \emph{not} a complex-orientable ring spectrum.  It is close to one, though, and we gain access to it through familiar approximation.
 
-The easy initial calculation is the continuous \(p\)--adic \(K\)--homology \(K^\vee K\) can be computed to be \(K^\vee K = \CatOf{Spaces}(\Z_p^\times, \Z_p)\), the ring of \(\Z_p\)--valued functions\footnote{\emph{Functions}, not homomorphisms!} on \(\Z_p^\times\) which are continuous for the adic topologies on the domain and the target.  This comes out of the stable cooperations of \index{Landweber flat}Landweber flat homology theories discussed in \Cref{DefnChromaticHomologyThys}, where we showed that \(E_\Gamma\) has cooperations given by the ring of functions on the pro-\'etale group scheme \(\Aut \Gamma\).  For \(\Gamma = \G_m\), this group scheme \(\Aut \G_m\) is constant at \(\Z_p^\times\), so that \(K^\vee K\) is the ring of \(\Z_p\)--valued functions on \(\Z_p^\times\).  Turning to cohomology, it follows by the universal coefficient spectral sequence that \(K^0 K = \CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p)\) and that \(K^1 K = 0\).  These correspondences behave as follows:
+The easy initial calculation is the continuous \(p\)--adic \(KU\)--homology \(KU^\vee KU\) can be computed to be \(KU^\vee KU = \CatOf{Spaces}(\Z_p^\times, \Z_p)\), the ring of \(\Z_p\)--valued functions\footnote{\emph{Functions}, not homomorphisms!} on \(\Z_p^\times\) which are continuous for the adic topologies on the domain and the target.  This comes out of the stable cooperations of \index{Landweber flat}Landweber flat homology theories discussed in \Cref{DefnChromaticHomologyThys}, where we showed that \(E_\Gamma\) has cooperations given by the ring of functions on the pro-\'etale group scheme \(\Aut \Gamma\).  For \(\Gamma = \G_m\), this group scheme \(\Aut \G_m\) is constant at \(\Z_p^\times\), so that \(KU^\vee KU\) is the ring of \(\Z_p\)--valued functions on \(\Z_p^\times\).  Turning to cohomology, it follows by the universal coefficient spectral sequence that \(KU^0 KU = \CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p)\) and that \(KU^1 KU = 0\).  These correspondences behave as follows:
 \begin{enumerate}
-    \item The \index{Kronecker pairing}Kronecker pairing \[\S^0 \xrightarrow{c} K \sm K \xrightarrow{1 \sm f} K \sm K \xrightarrow{\mu} K\] is computed by the evaulation pairing \[(c \in K^\vee K, f \in K^0 K) \mapsto f(c).\]
+    \item The \index{Kronecker pairing}Kronecker pairing \[\S^0 \xrightarrow{c} KU \sm KU \xrightarrow{1 \sm f} KU \sm KU \xrightarrow{\mu} KU\] is computed by the evaluation pairing \[(c \in KU^\vee KU, f \in K^0 KU) \mapsto f(c).\]
     \item The stable operation \(\psi^\lambda\) attached to \([\lambda] \in \Aut \G_m\) is evaluation at \(\lambda\).
-    \item The stable cooperation \(v^{-k} \sm v^k \in \pi_0 K \sm K\) corresponds to the polynomial function \(x \mapsto x^k\), as justified by the computation \[\operatorname{ev}_{\lambda}(v^{-k} \sm v^k) = \frac{\psi^\lambda v^k}{v^k} = \frac{\lambda^k v^k}{v^k} = \lambda^k.\]
+    \item The stable cooperation \(v^{-k} \sm v^k \in \pi_0 KU \sm KU\) corresponds to the polynomial function \(x \mapsto x^k\), as justified by the computation \[\operatorname{ev}_{\lambda}(v^{-k} \sm v^k) = \frac{\psi^\lambda v^k}{v^k} = \frac{\lambda^k v^k}{v^k} = \lambda^k.\]
 \end{enumerate}
 
 \noindent These last two facts mean that the behavior of a stable operation on homotopy is identical information to the values of a functional \(f\) on the standard polynomial functions \(x^k\).  We record this algebraic model as follows:
@@ -1092,7 +1092,7 @@ For any \(N \ge 0\), the assignment \[\CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times,
 \end{lemma}
 
 \begin{remark}
-An interesting feature of the Lemma is the auxiliary index \(N\), which is \emph{not} part of the property of being K\"ummer.  In \(p\)--adic geometry, this is reflected by the \(p\)--adic convergence of the sequence \[d + (p-1)p^r \xrightarrow{r \to \infty} d,\] and hence the continuous reconstruction property \[x_d = \lim_{r \to \infty} x_{d + (p-1)p^r}.\]  In homotopy theory, this is reflected by the reconstruction property \[K \sm K[2k, \infty) \simeq K \sm K.\]
+An interesting feature of the Lemma is the auxiliary index \(N\), which is \emph{not} part of the property of being K\"ummer.  In \(p\)--adic geometry, this is reflected by the \(p\)--adic convergence of the sequence \[d + (p-1)p^r \xrightarrow{r \to \infty} d,\] and hence the continuous reconstruction property \[x_d = \lim_{r \to \infty} x_{d + (p-1)p^r}.\]  In homotopy theory, this is reflected by the reconstruction property \[KU \sm KU[2k, \infty) \simeq KU \sm KU.\]
 \end{remark}
 
 \begin{remark}
@@ -1101,12 +1101,12 @@ With this computation in hand, the spectrum of \(p\)--local cooperations \(KU_{(
 
 We now pass from \(KU\) to \(KO\).  To begin, use the \index{Tate vanishing}Tate trick
 \begin{align*}
-K \sm KO & \simeq K \sm (K^{hC_2}) \tag{\(KO\) is a homotopy fixed point spectrum} \\
-& \simeq K \sm (K_{hC_2}) \tag{Tate objects vanish \(K(1)\)--locally} \\
-& \simeq (K \sm K)_{hC_2} \tag{homotopy colimits pull past smash products} \\
-& \simeq (K \sm K)^{hC_2}, \tag{Tate objects vanish \(K(1)\)--locally}
+KU \sm KO & \simeq KU \sm (K^{hC_2}) \tag{\(KO\) is a homotopy fixed point spectrum} \\
+& \simeq KU \sm (KU_{hC_2}) \tag{Tate objects vanish \(K(1)\)--locally} \\
+& \simeq (KU \sm KU)_{hC_2} \tag{homotopy colimits pull past smash products} \\
+& \simeq (KU \sm KU)^{hC_2}, \tag{Tate objects vanish \(K(1)\)--locally}
 \end{align*}
-so that \(\pi_0 K \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)\).  Taking fixed points again, we then also have \(\pi_* KO \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, KO_*)\), and \(KO^* KO\) is the \(KO_*\)--linear dual.  From this we gain the computations
+so that \(\pi_0 KU \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)\).  Taking fixed points again, we then also have \(\pi_* KO \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, KO_*)\), and \(KO^* KO\) is the \(KO_*\)--linear dual.  From this we gain the computations
 \begin{align*}
 [\Susp^{-1} KO, KO] & = 0, &
 [KO, KO] & = \CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times / C_2, \Z_p), \Z_p)
