--- a/sigma.tex
+++ b/sigma.tex
@@ -1084,7 +1084,7 @@ The section \(s(A; \L)\) satisfies three familiar properties:
 Breen presented a relative version of this part of the story that applies to arbitrary \emph{commutative group schemes}, where the basic objects are a choice of line bundle \(\L\) over a commutative group scheme \(A\), a choice of trivialization of \(\Theta^3 \L\), and an epimorphism \(\pi\co A' \to A\) that trivializes \(\L\).
 \end{remark}
 
-Finally, we remark that the function \[e\co C^3(\G; \Gm) \to \InternalHom{FormalGroups}(\G^{\sm 2}, \Gm)\] considered in \Cref{ChromaticKUCoopnsSection} also manifests in the theory of abelian varieties.  Let \(A\) be an abelian variety equipped with a line bundle \(\L\).  Suppose that \(s\) is a symmetric, rigid section of \(\Theta^3 \L\), sometimes called a \index{cubical structure}\textit{cubical structure on \(\L\)}.  Using the identification \((p_{12} - p_1 - p_2)^* \Theta^2 \L = \Theta^3 \L\), this induces the structure of a \textit{symmetric biextension}\index{cubical structure!symmetric biextension} on \(\Theta^2 \L\) via the multiplication maps
+Finally, we remark that the function \[e\co C^3(\G; \Gm) \to \InternalHom{FormalGroups}(\G^{\sm 2}, \Gm)\] considered in \Cref{ChromaticKUCoopnsSection} also manifests in the theory of abelian varieties.  Let \(A\) be an abelian variety equipped with a line bundle \(\L\).  Suppose that \(s\) is a symmetric, rigid section of \(\Theta^3 \L\), sometimes called a \index{cubical structure}\textit{cubical structure on \(\L\)}.  Using the identification \((p_{12} - p_1 - p_2)^* \Theta^2 \L = \Theta^3 \L\), this induces the structure of a \textit{symmetric biextension}\index{cubical structure!symmetric biextension}\footnote{Biextensions themselves are a common tool in the theory of moduli of abelian varieties: a biextension on $A \times B$ is identical data to a map $A \to B^*$.} on \(\Theta^2 \L\) via the multiplication maps
 \begin{align*}
 (\Theta^2 \L)_{x, y} \otimes (\Theta^2 \L)_{x', y} & \to (\Theta^2 \L)_{x + x', y}, \\
 (\Theta^2 \L)_{x, y} \otimes (\Theta^2 \L)_{x, y'} & \to (\Theta^2 \L)_{x, y + y'}.
@@ -1175,7 +1175,7 @@ This function \(e_{p^j}\) is called the \index{Weil pairing}\textit{(\(p^j\)){\t
 \end{figure}
 
 \begin{remark}
-In the case that \(A\) is an elliptic curve, this agrees with the usual definition of its ``Weil pairing''.  In the case of a \emph{complex} elliptic curve \(\C / (1, \tau)\), this degenerates further to the assignment \[\left( \frac{a}{n}, \frac{b}{n} \tau \right) \mapsto \exp\left(-2\pi i \frac{ab}{n}\right).\]
+In the case that \(A\) is an elliptic curve, this agrees with the usual definition of its ``Weil pairing''.  In the case of a \emph{complex} elliptic curve \(\C / (1, \tau)\), this amounts to the assignment \[\left( \frac{a}{n}, \frac{b}{n} \tau \right) \mapsto \exp\left(-2\pi i \frac{ab}{n}\right).\]
 \end{remark}
 
 We now actually leverage this arithmetic geometry by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
