shout-out to polishchuk

--- a/main.bib
+++ b/main.bib
@@ -3044,6 +3044,14 @@ MRREVIEWER = {P. S. Landweber},
   note = {In preparation}
 }
 
+@book{Polishchuk,
+  title={Abelian varieties, theta functions and the Fourier transform},
+  author={Polishchuk, Alexander},
+  volume={153},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
 @article{Priddy,
   title={A cellular construction of {$BP$} and other irreducible spectra},
   author={Priddy, Stewart},
