--- a/sigma.tex
+++ b/sigma.tex
@@ -1006,7 +1006,7 @@ There is a second standard embedding of a complex elliptic curve into projective
 The basic \(\theta\)--function associated to \(E_\Lambda\) is defined by \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Given two rational numbers \(0 \le a, b \le 1\), we can also shift the zero-set of \(\theta_q\) in the \(1\) and \(q\) directions by the fractions \(a\) and \(b\), giving translated \(\theta\)--functions: \[\theta_q^{a,b}(u) = \left(q^{\frac{a^2}{2}} \cdot u^a \cdot \exp(2 \pi i a b) \right) \cdot \theta_q(u q^a \exp(2 \pi i b)).\]
 \end{definition}
 
-The basic \(\theta\)--function vanishes on the set \(\{\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))\}\), i.e., at the center of the fundamental annulus.  Since it has no poles, it cannot descend to give a function on \(\C^\times / q^{\Z}\), and its failure to descend is witnessed by its imperfect periodicity relation: \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]
+The basic \(\theta\)--function vanishes on the set \(\{\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))\}\), i.e., at the center of the fundamental annulus.  Since it has no poles, it cannot descend to give a function on \(\C^\times / q^{\Z}\),\footnote{Rather, it gives a section of a nontrivial line bundle on this quotient.} and its failure to descend is witnessed by its imperfect periodicity relation: \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]
 
 \begin{lemma}[{\cite[Proposition 10.2.6]{Husemoller}}]
 For any \(N > 0\), define \(V_q[N]\) to be the space of functions \(f\co \C^\times \to \C\) satisfying \[f(q u) = u^{-N}  q^{-N^2/2} f(u).\]  Then, \(V_q[N]\) has \(\C\)--dimension \(N^2\), and the functions \(\theta_q^{a, b}\) give a basis as \(a\) and \(b\) range over rational numbers with denominator \(N\). \qed
@@ -1023,24 +1023,24 @@ For \(N > 1\), this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-Let us expand this in the case of \(N = 2\).  The four functions involved are labeled \(\theta_q^{0,0}\), \(\theta_q^{0,1/2}\), \(\theta_q^{1/2,0}\), and \(\theta_q^{1/2,1/2}\), and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations
+Let us expand this in the case of \(N = 2\).  The four functions involved are labeled \[\theta_{q^2}^{0,0}, \theta_{q^2}^{0,1/2}, \theta_{q^2}^{1/2,0}, \theta_{q^2}^{1/2,1/2},\] and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations
 \begin{align*}
 A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, &
 A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
 \end{align*}
 where
 \begin{align*}
-x_0 & = \theta_q^{0, 0}(u^2), &
-x_1 & = \theta_q^{0, 1/2}(u^2), &
-x_2 & = \theta_q^{1/2, 0}(u^2), &
-x_3 & = \theta_q^{1/2, 1/2}(u^2)
+x_0 & = \theta_{q^2}^{0, 0}(u^2), &
+x_1 & = \theta_{q^2}^{0, 1/2}(u^2), &
+x_2 & = \theta_{q^2}^{1/2, 0}(u^2), &
+x_3 & = \theta_{q^2}^{1/2, 1/2}(u^2)
 \end{align*}
 and
 \begin{align*}
-A & = \theta_q^{0, 0}(0) = \sum_n q^{n^2}, &
-B & = \theta_q^{0, 1/2}(0) = \sum_n (-1)^n q^{n^2},
+A & = \theta_{q^2}^{0, 0}(1) = \sum_n q^{n^2}, &
+B & = \theta_{q^2}^{0, 1/2}(1) = \sum_n (-1)^n q^{n^2},
 \end{align*}
-\[C = \theta_q^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2},\]
+\[C = \theta_{q^2}^{1/2, 0}(1) = \sum_n q^{(n + 1/2)^2},\]
 upon which there is the additional \index{theta function@\(\theta\)--function!Jacobi relation}\textit{Jacobi relation} \[A^4 = B^4 + C^4.\]
 \end{example}
 
@@ -1049,20 +1049,20 @@ upon which there is the additional \index{theta function@\(\theta\)--function!Ja
 \begin{tabular}{@{}cc@{}} \toprule
 Function & Zero locus \\
 \midrule
-\(\theta_q^{0,0}\) & \(q^{\Z} \cdot q^{1/2} \cdot i\) \\
-\(\theta_q^{0,1/2}\) & \(q^{\Z} \cdot q^{1/2}\) \\
-\(\theta_q^{1/2,0}\) & \(q^{\Z} \cdot i\) \\
-\(\theta_q^{1/2,1/2}\) & \(q^{\Z}\). \\ \bottomrule
+\(\theta_{q^2}^{0,0}\) & \(-q^{1+2\Z}\) \\
+\(\theta_{q^2}^{0,1/2}\) & \(q^{1+2\Z}\) \\
+\(\theta_{q^2}^{1/2,0}\) & \(-q^{2\Z}\) \\
+\(\theta_{q^2}^{1/2,1/2}\) & \(q^{2\Z}\). \\ \bottomrule
 \end{tabular}
 \end{center}
 \caption{Standard \(\theta\)--functions and their offsets}\label{ThetaFunctionsTable}
 \end{figure}
 
 \begin{remark}
-This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
+This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any meromorphic function on the elliptic curve $E_\Lambda$ can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an elliptic curve (indeed, on an arbitrary complex abelian variety\index{abelian variety}) are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, and finally that this canonical basis becomes the classical $\theta$--functions under the induced isomorphism~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,MumfordEquationsII,MumfordEquationsIII,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation described remains unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), from which the form of the relevant quartics can be deduced, altogether giving an effective description of the \emph{moduli} of abelian varieties as an analogue of the Jacobi quartic.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
+Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an elliptic curve\footnote{Indeed, even on an arbitrary complex abelian variety\index{abelian variety}.} are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, and finally that this canonical basis becomes the classical $\theta$--functions under the induced isomorphism~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation is unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), as the coefficients of the relevant generalizations of the Jacobi quartics can be deduced from it (cf.\ the formulas for $A$, $B$, and $C$), altogether giving an effective description of the \emph{moduli} of abelian varieties by a generalization of the Jacobi \emph{relation}~\cite{MumfordEquationsII,MumfordEquationsIII}.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
 \begin{theorem}[{``Theorem of the Cube'', \cite[Theorem I.5.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@\(\Theta\)--structure|see {cubical structure}}
 Let \(A\) be an abelian variety, let \(p_i: A \times A \times A \to A\) be the projection onto the \(i\){\th} factor, and let \(p_{ij} = p_i +_A p_j\), \(p_{ijk} = p_i +_A p_j +_A p_k\).  Then for any invertible sheaf \(\L\) on \(A\), the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on \(A \times A \times A\) is trivial.  If \(\L\) is rigid (i.e., it has a specified trivialization at the identity point of \(A\)), then \(\Theta^3(\L)\) is \emph{canonically} trivialized by a section \(s(A; \L)\). \qed
 \end{theorem}
