superior layout of 5.5

--- a/sigma.tex
+++ b/sigma.tex
@@ -1046,13 +1046,10 @@ upon which there is the additional \index{theta function@\(\theta\)--function!Ja
 
 \begin{figure}
 \begin{center}
-\begin{tabular}{@{}cc@{}} \toprule
-Function & Zero locus \\
-\midrule
-\(\theta_{q^2}^{0,0}\) & \(-q^{1+2\Z}\) \\
-\(\theta_{q^2}^{0,1/2}\) & \(q^{1+2\Z}\) \\
-\(\theta_{q^2}^{1/2,0}\) & \(-q^{2\Z}\) \\
-\(\theta_{q^2}^{1/2,1/2}\) & \(q^{2\Z}\). \\ \bottomrule
+\begin{tabular}{@{}ccccc@{}} \toprule
+Function & \(\theta_{q^2}^{0,0}\) & \(\theta_{q^2}^{0,1/2}\) & \(\theta_{q^2}^{1/2,0}\) & \(\theta_{q^2}^{1/2,1/2}\) \\ \\
+Zero locus & \(-q^{1+2\Z}\) & \(q^{1+2\Z}\) & \(-q^{2\Z}\) & \(q^{2\Z}\) \\
+\bottomrule
 \end{tabular}
 \end{center}
 \caption{Standard \(\theta\)--functions and their offsets}\label{ThetaFunctionsTable}
