eliminate waste words in 5.4.19

--- a/sigma.tex
+++ b/sigma.tex
@@ -878,9 +878,9 @@ The case \(k = 3\) requires a small modification, to cope with the two classes o
 For \(E\) an even and periodic cohomology theory, \(BU[6, \infty)_E\) models the scheme \(C_3 \CP^\infty_E\).
 \end{theorem}
 \begin{proof}[Proof sketch]
-Let \(\G\) be an arbitrary formal group.  Note first that if \(C^3(\G; \Gm)\) is \index{formal scheme!coalgebraic}coalgebraic, then \(C_3 \G\) exists and is its \index{formal group!Cartier dual}Cartier dual: the diagram presenting \(\sheaf OC^3(\G; \Gm)\) as a reflexive coequalizer of free Hopf algebras is also the diagram meant to present \(C_3 \G\) as a coalgebraic formal scheme.  So, if the coequalizing Hopf algebra has a good basis, it will follow from \Cref{CoalgebraicColimitsExist} that the resulting diagram is a colimit diagram in formal schemes, with \(C_3 \G\) sitting at the cone point.  It will additionally follow that the isomorphism \[\Spec E_0 BU[6, \infty) \xrightarrow{\cong} C^3(\CP^\infty_E; \Gm)\] of \Cref{Pi3ForCplxOrientableE} will re-dualize to an isomorphism \[BU[6, \infty)_E \xleftarrow{\cong} C_3 \CP^\infty_E.\]  So, we reduce to checking that \(\sheaf O C^3(\G; \Gm)\) admits a good basis.  By a base change argument, it suffices to take \(\G\) to be the universal formal group over \(\sheaf O_{\moduli{fgl}}\), and we thus set about finding a nice basis for that.
+Let \(\G\) be an arbitrary formal group.  Note first that if \(C^3(\G; \Gm)\) is \index{formal scheme!coalgebraic}coalgebraic, then \(C_3 \G\) exists and is its \index{formal group!Cartier dual}Cartier dual: the diagram presenting \(\sheaf OC^3(\G; \Gm)\) as a reflexive coequalizer of free Hopf algebras is also the diagram meant to present \(C_3 \G\) as a coalgebraic formal scheme.  So, if the coequalizing Hopf algebra has a good basis, it will follow from \Cref{CoalgebraicColimitsExist} that the resulting diagram is a colimit diagram in formal schemes, with \(C_3 \G\) sitting at the cone point.  It will additionally follow that the isomorphism \[\Spec E_0 BU[6, \infty) \xrightarrow{\cong} C^3(\CP^\infty_E; \Gm)\] of \Cref{Pi3ForCplxOrientableE} will re-dualize to an isomorphism \[BU[6, \infty)_E \xleftarrow{\cong} C_3 \CP^\infty_E.\]
 
-We hope to gain control (as in \Cref{HopfRingForEBP} or \Cref{Pi3ForCplxOrientableE}) of this situation using our strong knowledge of \(\sheaf O C^3(\G_a; \Gm)\).  We know from \Cref{CkGaGmAreFVars} that \(\sheaf O C^3(\G_a; \Gm)\) is a free abelian group, and we know from \Cref{LazardsTheorem} that \(\sheaf O(\moduli{fgl})\) is as well.  By picking a \(\Z\)--basis \(\Z\{\beta_j\}_j\) of \(\sheaf O C^3(\G_a; \Gm)\) and considering the specialization map from \(\G\) over \(\moduli{fgl}\) to \(\G_a\) over \(\Spec \Z\), we choose a map \(\alpha\) of \(\sheaf O(\moduli{fgl})\)--modules
+By a base change argument, it suffices to take \(\G\) to be the universal formal group over \(\sheaf O_{\moduli{fgl}}\), and we thus set about finding a good basis in this case.  We hope to gain control (as in \Cref{HopfRingForEBP} or \Cref{Pi3ForCplxOrientableE}) of this situation using our strong knowledge of \(\sheaf O C^3(\G_a; \Gm)\).  We know from \Cref{CkGaGmAreFVars} that \(\sheaf O C^3(\G_a; \Gm)\) is a free abelian group, and we know from \Cref{LazardsTheorem} that \(\sheaf O(\moduli{fgl})\) is as well.  By picking a \(\Z\)--basis \(\Z\{\beta_j\}_j\) of \(\sheaf O C^3(\G_a; \Gm)\) and considering the specialization map from \(\G\) over \(\moduli{fgl}\) to \(\G_a\) over \(\Spec \Z\), we choose a map \(\alpha\) of \(\sheaf O(\moduli{fgl})\)--modules
 \begin{center}
 \begin{tikzcd}
 \sheaf O(\moduli{fgl})\{\tilde \beta_j\}_j \arrow["\alpha"]{r} \arrow{d} & \sheaf O C^3(\G; \Gm) \arrow{d} \\
