move footnote placement

--- a/sigma.tex
+++ b/sigma.tex
@@ -1006,7 +1006,7 @@ There is a second standard embedding of a complex elliptic curve into projective
 The basic \(\theta\)--function associated to \(E_\Lambda\) is defined by \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Given two rational numbers \(0 \le a, b \le 1\), we can also shift the zero-set of \(\theta_q\) in the \(1\) and \(q\) directions by the fractions \(a\) and \(b\), giving translated \(\theta\)--functions: \[\theta_q^{a,b}(u) = \left(q^{\frac{a^2}{2}} \cdot u^a \cdot \exp(2 \pi i a b) \right) \cdot \theta_q(u q^a \exp(2 \pi i b)).\]
 \end{definition}
 
-The basic \(\theta\)--function vanishes on the set \(\{\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))\}\), i.e., at the center of the fundamental annulus.  Since it has no poles, it cannot descend to give a function on \(\C^\times / q^{\Z}\),\footnote{Rather, it gives a section of a nontrivial line bundle on this quotient.} and its failure to descend is witnessed by its imperfect periodicity relation: \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]
+The basic \(\theta\)--function vanishes on the set \(\{\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))\}\), i.e., at the center of the fundamental annulus.  Since it has no poles, it cannot descend to give a function on \(\C^\times / q^{\Z}\), and its failure to descend is witnessed by its imperfect periodicity relation:\footnote{Equivalently, \(\theta_q\) is properly considered as a section of a nontrivial line bundle on this quotient.} \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]
 
 \begin{lemma}[{\cite[Proposition 10.2.6]{Husemoller}}]
 For any \(N > 0\), define \(V_q[N]\) to be the space of functions \(f\co \C^\times \to \C\) satisfying \[f(q u) = u^{-N}  q^{-N^2/2} f(u).\]  Then, \(V_q[N]\) has \(\C\)--dimension \(N^2\), and the functions \(\theta_q^{a, b}\) give a basis as \(a\) and \(b\) range over rational numbers with denominator \(N\). \qed
